# vxl

./: Cargo.toml  build.rs
crates/core/: Cargo.toml
crates/game/: Cargo.toml
crates/game/src/: main.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: app.rs  buffers.rs  descriptors.rs  device.rs  images.rs  imgui.rs  immediate_commands.rs  lib.rs  meshes.rs  pipelines.rs  surface.rs  swapchain.rs
resources/shaders/example/: gradient.comp  gradient_color.comp  mesh.vert
src/: app.rs  main.rs  renderer.rs
src/imgui/: mod.rs
src/renderer/: buffers.rs  command_buffers.rs  command_pools.rs  commands.rs  compute_pipelines.rs  descriptor.rs  descriptors.rs  device.rs  frame_buffers.rs  images.rs  immediate_commands.rs  instance.rs  meshes.rs  mod.rs  pipeline.rs  pipelines.rs  surface.rs  swapchain.rs  sync.rs  vertex.rs
src/utility/: mod.rs  spatial_octree.rs
src/utility/sparse_spatial_octree/: mod.rs  tests.rs
src/world/: chunk.rs  mod.rs
