[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
glam = "0.30.2"
gltf = "1.4.1"
imgui = "0.12.0"
imgui-rs-vulkan-renderer = { version = "1.16.0", features = ["dynamic-rendering"] }
imgui-winit-support = "0.13.0"
vk-mem = "0.4.0"
vk-shader-macros = "0.2.10"
winit = "0.30.9"
core = {path = "../core"}
